# libpag

./: .clang-format  .gitattributes  .gitignore  0001-refactor-the-pag-source-code.patch  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  CPPLINT.cfg  DEPS  GlassShaderImplementation.md  LAYER_CONSTRAINT_TEST_SCREENSHOTS.md  LICENSE.txt  Linux_build.md  PAGFullTest.json  PAGXStateMachineDesign.md  POLYSTAR_COMMITS_DETAILED.md  POLYSTAR_HISTORY_ANALYSIS.md  POLYSTAR_QUICK_REFERENCE.txt  POLYSTAR_RESEARCH_INDEX.md  README.md  README.zh_CN.md  accept_baseline.sh  autotest.sh  build_all_android.sh  build_linux.sh  build_pag  build_vendor  codecov.sh  codeformat.sh  gen_xcode  install_emscripten.sh  install_tools.sh  libpag.podspec  pag.hash  sync_deps.sh  test.sh  update_baseline.sh  vendor.json
cli/: CMakeLists.txt  README.md  generate_xsd_header.cmake
cli/npm/: README.md  pack.sh  package.json  pagx.js
cli/npm/html-snapshot/: .gitignore  .npmignore  launch.js
cli/npm/scripts/: build-html-snapshot.js  check-binaries.js
cli/src/: CommandBounds.cpp  CommandBounds.h  CommandFont.cpp  CommandFont.h  CommandFormat.cpp  CommandFormat.h  CommandMeasure.cpp  CommandMeasure.h  CommandOptimize.cpp  CommandOptimize.h  CommandRender.cpp  CommandValidator.cpp  CommandValidator.h  CommandZoom.cpp  CommandZoom.h  main.cpp
cli/test/: PAGXCliTest.cpp
exporter/: .gitignore  CMakeLists.txt  PAGExporterPiPL.r  README.md  README.zh_CN.md
exporter/assets/: res.qrc
exporter/assets/qml/: AlertDialog.qml  AlertError.qml  AlertWarning.qml  CompositionListView.qml  CompositionSettingPage.qml  Config.qml  ConfigWindow.qml  ErrorTextArea.qml  ExportCompositionProgress.qml  ExportCompositionsProgress.qml  ExportPanel.qml  PAGComboBox.qml  PAGListView.qml  PAGRectangle.qml  PAGTabButton.qml  PAGTextInput.qml  PAGViewerInstall.qml  PAGWindow.qml  PlaceholderImageItem.qml  PreCompositionItem.qml  ProgressListView.qml  TextHelper.qml  TextLayerItem.qml  TimeStretchItem.qml
exporter/assets/scripts/: GetTextDocument.js
exporter/assets/translation/: Chinese.ts
exporter/resource/mac/: PAGExporter.plugin-Info.plist
exporter/scripts/mac/: debugbuild.sh  takeControl
exporter/scripts/win/: deployqt.bat
exporter/src/: ConfigParam.h  main.cpp
exporter/src/Config/: ConfigFile.cpp  ConfigFile.h  ConfigParam.h
exporter/src/aecommand/: AECommand.cpp  AECommand.h
exporter/src/config/: ConfigFile.cpp  ConfigFile.h  ConfigParam.h
exporter/src/export/: ExportComposition.cpp  ExportComposition.h  ExportLayer.cpp  ExportLayer.h  ExportVerify.cpp  ExportVerify.h  Marker.cpp  Marker.h  PAGExport.cpp  PAGExport.h
exporter/src/platform/: PAGViewerCheck.h  PAGViewerInstaller.cpp  PAGViewerInstaller.h  PlatformHelper.h
exporter/src/report/: PAGReporter.cpp  PAGReporter.h
exporter/src/ui/: AlertInfoModel.cpp  AlertInfoModel.h  BaseWindow.cpp  BaseWindow.h  (+8 more)
exporter/templates/: PAGExporter.rc.in  version.h.in
linux/: CMakeLists.txt  README.md  README.zh_CN.md  build_pag.sh
linux/src/: main.cpp
pag-exporter/: .gitignore  CMakeLists.txt  DEPS  PAGExporterPiPL.r  vendor.json
pag-exporter/assets/: res.qrc
pag-exporter/src/: main.cpp
pagx/: CMakeLists.txt  pagx.hash
pagx/docs/: pagx_spec.md  pagx_spec_v1.0.md
pagx/scripts/: publish_spec.js  publish_spec.py
pagx/spec/: pagx_spec.md  pagx_spec.zh_CN.md
pagx/src/: Base64.cpp  Base64.h  Data.cpp  MathUtil.h  PAGXDocument.cpp  PAGXElement.cpp  PAGXEnumUtils.cpp  PAGXEnumUtils.h  PAGXExporter.cpp  PAGXExporterAPI.cpp  PAGXExporterImpl.h  PAGXImporter.cpp  PAGXImporter.h  PAGXImporterAPI.cpp  PAGXImporterImpl.h  PAGXNode.cpp  PAGXResource.cpp  PAGXStringUtils.cpp  PAGXStringUtils.h  PAGXTypes.cpp  PAGXXMLParser.cpp  PAGXXMLParser.h  PAGXXMLWriter.cpp  PAGXXMLWriter.h  PathData.cpp  SVGPathParser.cpp  StringParser.cpp  StringParser.h  TextGlyphs.cpp
pagx/viewer/: .gitignore  CMakeLists.txt  index.css  index.html  index.ts  package.json  pagx-viewer.hash  server.js  tsconfig.json  types.ts
pagx/wechat/: .gitignore  CHANGELOG.md  CMakeLists.txt  PAGScene_ADAPTATION.md  PAGScene_IMPLEMENTATION_PLAN.md  PAGScene_PERF_RESTORE.md  README.md  README.zh_CN.md  package.json  pagx-viewer.hash  server.js  tsconfig.json  tsconfig.type.json
playground/: .gitignore  CMakeLists.txt  index.css  index.html  index.ts  package.json  pagx-playground.hash  server.js  skills-page.html  skills-page.zh_CN.html  types.ts
playground/pagx-player/: .gitignore  package-lock.json  package.json  tsconfig.json
playground/pagx-playground/: .gitignore  README.md  README.zh_CN.md  package-lock.json  package.json
playground/pagx-viewer/: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  package-lock.json  package.json  pagx-viewer.hash  tsconfig.json  tsconfig.type.json  tsconfig.type.st.json
playground/script/: cmake.js  publish.cjs  publish.js  rollup.js
playground/src/: GridBackground.cpp  GridBackground.h  PAGXView.cpp  PAGXView.h  binding.cpp
qt/: CMakeLists.txt  README.md  README.zh_CN.md
qt/qml/: Main.qml
qt/src/: PAGView.cpp  PAGView.h  PAGViewer.h  PAGWindow.cpp  main.cpp
tgfx/: CMakeLists.txt  CPPLINT.cfg  README.md
tgfx/web/: .gitignore  package.json  tsconfig.json  tsconfig.type.json
viewer/: .gitignore  CMakeLists.txt  DEPS  README.md  README.zh_CN.md  res.qrc  sync_deps.sh  vendor.json
viewer/assets/: res.qrc
viewer/cmake/: global_setting.cmake  set_info.cmake  utils.cmake
viewer/images/: appIcon.icns  pagIcon.icns
viewer/package/: build_mac.sh  build_windows.ps1  sign_update.bat  sign_update.sh  test.sh
viewer/pag/: jzznm.pag
viewer/qml/: AboutWindow.qml  ControlForm.qml  FileTreeViewDelegate.qml  ImageListView.qml  Main.qml  MainForm.qml  Menu.qml  PerformanceWarnDialog.qml  Profiler.qml  SaveFileDialog.qml  SettingsWindow.qml  TextEditDialog.qml  TextListView.qml
viewer/qttools/: copy_qt_resource.sh  delete_old_qt_resource.sh  delete_qt_resource.sh  replace_qt_path.sh
viewer/src/: CMakeLists.txt  PAGView.cpp  PAGView.h  PAGViewer.cpp  PAGViewer.h  PAGWindow.cpp  PAGWindow.h  main.cpp
viewer/tools/: gen_p12.sh
(+14087 files in other folders)
